added main function to satisfy test condition

--- a/Unit_Test_RPS/Unit_Test_RPS.vcxproj.filters
+++ b/Unit_Test_RPS/Unit_Test_RPS.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.c">
+    <ClCompile Include="..\Rock_Paper_Scissors\main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="main.h">
+    <ClInclude Include="..\Rock_Paper_Scissors\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
